--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "ar_ecommerce_flutter",
-    "short_name": "ar_ecommerce_flutter",
+    "name": "e_commerce",
+    "short_name": "e_commerce",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
