--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
   form_field_validator: ^1.1.0
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
