--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   equatable: ^2.0.5
   form_field_validator: ^1.1.0
   dio: ^4.0.6
+  dio_cookie_manager: ^2.0.0
+  cookie_jar: ^3.0.1
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
