--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "e_commerce",
-    "short_name": "e_commerce",
+    "name": "marketplace",
+    "short_name": "marketplace",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
