--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,4 +68,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.ar:core:1.33.0'
 }
