--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   babylonjs_viewer: ^1.1.4
   flutter_otp_text_field: ^1.1.1
   flutter_stripe: ^7.0.0
+  intl: ^0.18.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
