--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_otp_text_field: ^1.1.1
   flutter_stripe: ^7.0.0
   intl: ^0.18.0
+  image_picker: ^0.8.6+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
