--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   file_picker: ^5.2.5
   url_launcher: ^6.1.8
   permission_handler: ^10.2.0
+  screenshot: ^1.3.0
+  native_screenshot: ^1.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
