--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.marketplace">
+    package="com.example.marketplace" xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.CAMERA" />
+<uses-feature android:name="android.hardware.camera" />
    <application
         android:label="marketplace"
         android:name="${applicationName}"
@@ -32,7 +34,8 @@
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="flutterEmbedding"
-            android:value="2" />
-        <meta-data android:name="com.google.ar.core" android:value="required" />
+            android:value="2"/>
+
+        <meta-data android:name="com.google.ar.core" android:value="optional" />
     </application>
 </manifest>
