--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   camera: ^0.8.1+3
   path:
   video_player:
+  archive:
   babylonjs_viewer: ^1.1.4
   flutter_otp_text_field: ^1.1.1
   flutter_stripe: ^7.0.0
