--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   permission_handler: ^10.2.0
   screenshot: ^1.3.0
   native_screenshot: ^1.0.0
+  currency_text_input_formatter: ^2.1.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -108,3 +109,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+dependency_overrides:
+  intl: ^0.18.0
