--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   screenshot: ^1.3.0
   native_screenshot: ^1.0.0
   currency_text_input_formatter: ^2.1.8
+  flutter_native_image: ^0.0.6+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
