--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   native_screenshot: ^1.0.0
   currency_text_input_formatter: ^2.1.8
   flutter_native_image: ^0.0.6+1
+  ar_flutter_plugin: ^0.7.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
