--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -38,6 +38,6 @@
             android:name="flutterEmbedding"
             android:value="2"/>
 
-        <meta-data android:name="com.google.ar.core" android:value="optional" />
+        <!-- <meta-data android:name="com.google.ar.core" android:value="optional" /> -->
     </application>
 </manifest>
